; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_varasm.c_default_named_section_asm_out_constructor.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_varasm.c_default_named_section_asm_out_constructor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c".ctors\00", align 1
@DEFAULT_INIT_PRIORITY = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c".ctors.%.5u\00", align 1
@MAX_INIT_PRIORITY = common dso_local global i32 0, align 4
@SECTION_WRITE = common dso_local global i32 0, align 4
@POINTER_SIZE = common dso_local global i32 0, align 4
@BITS_PER_UNIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @default_named_section_asm_out_constructor(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca [16 x i8], align 16
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @DEFAULT_INIT_PRIORITY, align 4
  %9 = icmp ne i32 %7, %8
  br i1 %9, label %10, label %17

10:                                               ; preds = %2
  %11 = getelementptr inbounds [16 x i8], [16 x i8]* %6, i64 0, i64 0
  %12 = load i32, i32* @MAX_INIT_PRIORITY, align 4
  %13 = load i32, i32* %4, align 4
  %14 = sub nsw i32 %12, %13
  %15 = call i32 @sprintf(i8* %11, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 %14)
  %16 = getelementptr inbounds [16 x i8], [16 x i8]* %6, i64 0, i64 0
  store i8* %16, i8** %5, align 8
  br label %17

17:                                               ; preds = %10, %2
  %18 = load i8*, i8** %5, align 8
  %19 = load i32, i32* @SECTION_WRITE, align 4
  %20 = call i32 @get_section(i8* %18, i32 %19, i32* null)
  %21 = call i32 @switch_to_section(i32 %20)
  %22 = load i32, i32* @POINTER_SIZE, align 4
  %23 = call i32 @assemble_align(i32 %22)
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* @POINTER_SIZE, align 4
  %26 = load i32, i32* @BITS_PER_UNIT, align 4
  %27 = sdiv i32 %25, %26
  %28 = load i32, i32* @POINTER_SIZE, align 4
  %29 = call i32 @assemble_integer(i32 %24, i32 %27, i32 %28, i32 1)
  ret void
}

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @switch_to_section(i32) #1

declare dso_local i32 @get_section(i8*, i32, i32*) #1

declare dso_local i32 @assemble_align(i32) #1

declare dso_local i32 @assemble_integer(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
